# three-body-gr

./: .gitignore  CMakeLists.txt  README.md
include/: body.h  camera.h  shader.h  simulation.h  spacetime_grid.h
shaders/: body.frag  body.vert  grid.frag  grid.vert  trace.frag  trace.vert
src/: body.cpp  camera.cpp  main.cpp  shader.cpp  simulation.cpp  spacetime_grid.cpp
